# saltstack-dev

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: test-action.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
docs/: conf.py  index.rst
docs/ref/modules/: index.rst  saltext.aws_management.modules.aws_management_mod.rst
docs/ref/sdb/: index.rst  saltext.aws_management.sdb.aws_management_mod.rst
docs/ref/states/: index.rst  saltext.aws_management.states.aws_management_mod.rst
docs/topics/: installation.md
src/saltext/aws_management/modules/: aws_management_mod.py
src/saltext/aws_management/sdb/: aws_management_mod.py
src/saltext/aws_management/states/: aws_management_mod.py
tests/: conftest.py
tests/functional/modules/: test_aws_management.py
tests/functional/states/: test_aws_management.py
tests/integration/modules/: test_aws_management.py
tests/unit/modules/: test_aws_management.py
tests/unit/sdb/: test_aws_management.py
tests/unit/states/: test_aws_management.py
